--- a/index.html
+++ b/index.html
@@ -4,49 +4,76 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<!-- <script src="./js/modernizr.custom.js"></script> -->
-		<script type="./js/jquery.min.js"></script>
-	</head>
-	<body>
-		<div class="container">
-			<div id="splitlayout" class="splitlayout">
-				<div class="intro">
-					<div id="intro" class="side side-left">
-						<div class="intro-content">
-							<div class="profile"><img src="img/profile1.jpg" alt="profile1"></div>
-							<h1><span>Empresas </span><span>Publica tu oferta</span></h1>
-						</div>
-						<div class="overlay"></div>
-					</div>
-					<div class="side side-right">
-						<div class="intro-content">
-							<div class="profile"><img src="img/profile2.jpg" alt="profile2"></div>
-							<h1><span>Vendedores </span><span>Busca tu empleo</span></h1>
-						</div>
-						<div class="overlay"></div>
-					</div>
-				</div><!-- PANTALLA DE BIENVENIDA -->
-				<div class="page page-right">
-					<div class="page-inner">
+  <title>Seller - Ofertas de empleos para vendedores</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+<body>
+<!-- Main view -->
+<div id="main-area">
+	<header>
+		<h1>Ofertas de Empleos por empresas</h1>
+
+	</header>
+	<!-- Product grid -->
+	<section class="grid">
+		<!-- Products -->
+		<article class="oferta">
+			<div class="oferta-descripcion">
+				<img class="oferta-img" src="./img/claro.png" alt="Product 1" />
+				<h3 class="oferta-titulo">Gerente de Ventas</h3>
+				<span class="oferta-empresa">Claro</span>
+				<span class="oferta-descripcion-empresa">Claro es una marca de servicios de comunicaciones que pertenece a la empresa mexicana América Móvil,
+          y que junto a Telmex, Telcel y Telesites son controladas por el Grupo Carso, cuyo accionista mayoritario es Carlos Slim.</span>
+				<span class="oferta-descripcion">Multinacional de tecnología y telecomunicaciones busca vendedores con
+          experiencia minima de 6 meses en cualquier tipo de ventas o atencion al cliente con disponibilidad para trabajar de Domingo a Domingo en
+          horarios de apertura y cierre de los almacenes de cadena, Centros Comerciales. Debe ser una persona con excelente presentación personal y
+          buena actitud.</span>
+				<span class="oferta-requerimeintos">Educación Media / Disponibilidad para viajar</span>
+				<span class="oferta-salario highlight">Salario minimo mas prestaciones de ley</span>
+				<button class="aplicar aplicar-boton"><span>Aplicar a oferta</span></button>
+			</div>
+		</article>
+
+    <article class="oferta">
+			<div class="oferta-descripcion">
+				<img class="oferta-img" src="./img/chevrolet.png" alt="Product 1" />
+				<h3 class="oferta-titulo">Gerente de Ventas</h3>
+				<span class="oferta-empresa">Claro</span>
+				<span class="oferta-descripcion-empresa">Claro es una marca de servicios de comunicaciones que pertenece a la empresa mexicana América Móvil,
+          y que junto a Telmex, Telcel y Telesites son controladas por el Grupo Carso, cuyo accionista mayoritario es Carlos Slim.</span>
+				<span class="oferta-descripcion">Multinacional de tecnología y telecomunicaciones busca vendedores con
+          experiencia minima de 6 meses en cualquier tipo de ventas o atencion al cliente con disponibilidad para trabajar de Domingo a Domingo en
+          horarios de apertura y cierre de los almacenes de cadena, Centros Comerciales. Debe ser una persona con excelente presentación personal y
+          buena actitud.</span>
+				<span class="oferta-requerimeintos">Educación Media / Disponibilidad para viajar</span>
+				<span class="oferta-salario highlight">Salario minimo mas prestaciones de ley</span>
+				<button class="aplicar aplicar-boton"><span>Aplicar a oferta</span></button>
+			</div>
+		</article>
+
+    <article class="oferta">
+			<div class="oferta-descripcion">
+				<img class="oferta-img" src="./img/bayer.png" alt="Product 1" />
+				<h3 class="oferta-titulo">Gerente de Ventas</h3>
+				<span class="oferta-empresa">Claro</span>
+				<span class="oferta-descripcion-empresa">Claro es una marca de servicios de comunicaciones que pertenece a la empresa mexicana América Móvil,
+          y que junto a Telmex, Telcel y Telesites son controladas por el Grupo Carso, cuyo accionista mayoritario es Carlos Slim.</span>
+				<span class="oferta-descripcion">Multinacional de tecnología y telecomunicaciones busca vendedores con
+          experiencia minima de 6 meses en cualquier tipo de ventas o atencion al cliente con disponibilidad para trabajar de Domingo a Domingo en
+          horarios de apertura y cierre de los almacenes de cadena, Centros Comerciales. Debe ser una persona con excelente presentación personal y
+          buena actitud.</span>
+				<span class="oferta-requerimeintos">Educación Media / Disponibilidad para viajar</span>
+				<span class="oferta-salario highlight">Salario minimo mas prestaciones de ley</span>
+				<button class="aplicar aplicar-boton"><span>Aplicar a oferta</span></button>
+			</div>
+		</article>
 
 
-					</div><!-- INTERNA VENDEDORES -->
-				</div><!-- PAGINA DERECHA VENDEDORES -->
-				<div class="page page-left">
-					<div class="page-inner">
 
 
-					</div><!-- INTERNA EMPRESAS -->
-				</div><!-- PAGINA IZQUIERDA EMPRESAS-->
-				<a href="#" class="back back-right" title="back to intro">&rarr;</a>
-				<a href="#" class="back back-left" title="back to intro">&larr;</a>
-			</div><!-- PAGINA DIVIDIDAD DE BIENVENIDA -->
-		</div><!-- AREA COMPLETA SITIO -->
-			<!--	<script src="js/classie.js"></script> -->
-			<!-- <script src="js/cbpSplitLayout.js"></script> -->
-			<script type="./js/main.js"></script>
 
-	</body>
+	</section>
+</div><!-- /view -->
+<!-- product compare wrapper -->
+</body>
 </html>
